--- a/index.html
+++ b/index.html
@@ -7,15 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
-	<h3>Quirky Musical Instruments</h3>
-	<ul>
-		<li>
-			Otamatone
-		</li>
-		<li>
-			Lyre
-		</li>
-	</ul>
+    
+
+
+
+	
+	<div class="row"> 
+		<div class="column">
+			<h1>Hello world!</h1>
+
+		</div>
+		<div class="column">
+			<h3>Quirky Musical Instruments</h3>
+			<ul>
+				<li>
+					Otamatone
+				</li>
+				<li>
+					Lyre
+				</li>
+			</ul>
+		</div>
+		<div class="column">
+			<span>
+				<span>
+					<span class="nestedContent">
+						Nested content omg 
+					</span>
+				</span>
+			</span>
+		</div>
+	</div>
+	
+
+	
+
 </body>
 </html>
